# pogtool

./: README.md  build_windows.py  pogtool.py  pyproject.toml
pogtool/: __init__.py  __main__.py  cli.py  processors.py  readers.py
pogtool/commands/: __init__.py  compare.py  merge.py  stats.py
pogtool/core/: __init__.py  interfaces.py  models.py
pogtool/formatters/: __init__.py  csv.py  json.py  text.py
pogtool/parsers/: __init__.py  common.py  generic.py
tests/: __init__.py  test_compare_command.py  test_core.py  test_merge_command.py  test_stats_command.py
